# tome

./: .gitignore  README.md  _local_dev.py  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js
src/: app.html
src/api/: _dependency.py  main.py
src/routes/: +page.server.js  +page.svelte
